fixed mobile modal

--- a/characters.html
+++ b/characters.html
@@ -27,10 +27,13 @@
     <main>
         <div class="characters-grid container"></div>
         <div class="modal invisible">
-            <div class="modal-character-container">
-                <h2 class="modal-character__name"></h2>
-                <img src="" alt="" class="modal-character__image">
-                <a href="" target="_blank" class="modal-character__link">Visit the Wiki page for more info</a>
+            <div class="modal__box">
+                <i class="fa-solid fa-xmark modal__close"></i>
+                <div class="modal-character-container">
+                    <h2 class="modal-character__name"></h2>
+                    <img src="" alt="" class="modal-character__image">
+                    <a href="" target="_blank" class="modal-character__link">Visit the Wiki page for more info</a>
+                </div>
             </div>
         </div>
     </main>
