--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                     <img src="assets/imagens/worldimage3.jpg" alt="Psychonauts ingame screenshot" class="the-world__image">
                 </div>
             </div>
-            <div class="modal invisible">
+            <div class="modal invisible mobile-invisible">
                 <img src="" alt="" class="modal-image">
             </div>
         </section>
