--- a/psi-powers.html
+++ b/psi-powers.html
@@ -27,11 +27,14 @@
     <main>
         <div class="psi-powers-grid container"></div>
         <div class="modal invisible">
-            <div class="modal-psi-power-container">
-                <h2 class="modal-psi-power__name"></h2>
-                <img src="" alt="" class="modal-psi-power__image">
-                <p class="modal-psi-power__description"></p>
-                <a href="" target="_blank" class="modal-psi-power__link">Visit the Wiki page for more info</a>
+            <div class="modal__box">
+                <i class="fa-solid fa-xmark modal__close"></i>
+                <div class="modal-psi-power-container">
+                    <h2 class="modal-psi-power__name"></h2>
+                    <img src="" alt="" class="modal-psi-power__image">
+                    <p class="modal-psi-power__description"></p>
+                    <a href="" target="_blank" class="modal-psi-power__link">Visit the Wiki page for more info</a>
+                </div>
             </div>
         </div>
     </main>
