--- a/characters.html
+++ b/characters.html
@@ -13,7 +13,7 @@
 </head>
 <body>
     <header class="header container">
-        <h1>You Should Play Psychonauts</h1>
+        <a class="header__title" href="index.html"><h1>You Should Play Psychonauts!</h1></a>
         <i class="fa-solid fa-bars header__hamburger"></i>
         <nav class="header__nav">
             <i class="fa-solid fa-xmark header__close"></i>
