--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <header class="header container">
-        <h1>You Should Play Psychonauts</h1>
+        <a class="header__title" href="#"><h1>You Should Play Psychonauts!</h1></a>
         <i class="fa-solid fa-bars header__hamburger"></i>
         <nav class="header__nav">
             <i class="fa-solid fa-xmark header__close"></i>
