added real texts and other changes

--- a/index.html
+++ b/index.html
@@ -36,12 +36,12 @@
                 </div>
                 <div class="about-the-game__text">
                     <div class="about-the-game__text--first">
-                        <h3>Lorem, ipsum dolor.</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Culpa voluptate quasi, excepturi dolorum velit laboriosam quisquam at error voluptatum non officia, maiores eius. Aut inventore sit voluptatem doloribus officiis quibusdam!</p>
+                        <h3>Trust me, it's goooood!</h3>
+                        <p>I wouldn't be making this tribute website if it wasn't so good, so trust me. But expanding on that, Psychonauts is easily one of the best pieces of media that I have ever consumed in my entire life, for so many reasons, but primarily because of its uniqueness among other games, which resulted in a giant and faithful fanbase turning it in a super regarded cult classic.</p>
                     </div>
                     <div class="about-the-game__text--second">
-                        <h3>Lorem, ipsum dolor.</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Culpa voluptate quasi, excepturi dolorum velit laboriosam quisquam at error voluptatum non officia, maiores eius. Aut inventore sit voluptatem doloribus officiis quibusdam!</p>
+                        <h3>You like crazy cartoons?</h3>
+                        <p>It really does feel like a crazy cartoon put on a game, with its artstyle, personality, plot choices, characters, humour, dialogues and the general vibe of it, which makes it even more incredible. A mix of boldness and creativity from Tim Schaffer, because he really dove deep inside his most diverse ideas to make every single element of this game. But let's talk more about everything that makes it so good!</p>
                     </div>
                 </div>
             </div>
@@ -50,7 +50,14 @@
             <div class="setting__container following-sections">
                 <h2>The Setting</h2>
                 <h3>Get psyched!</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam, voluptatum? Culpa nihil omnis nesciunt cum error fugit quam iste reiciendis. Expedita fuga harum ducimus aut omnis perspiciatis tempore distinctio quia.</p>
+                <p>The whole vibe of the game is very different and creative, and you can sense all the love and care put into it by the whole team, but most importantly, by Tim Schaffer, the master-mind behind this masterpiece of a game.</p>
+                <img class="setting__container__gif" src="assets/imagens/razzle_dazzle.gif" alt="Razputin in-game gif">
+                <p>It has pretty detailed elements throughout the game and all of its pieces that transform it in a psychedelic experience, handling primarily with themes and topics that involves psychology and mental health, besides other plot-specific beats and things about relationship, believing in youself and overcoming our own demons.</p>
+                <p>And I can't talk about the vibe and setting of the game without mentioning the GREAT soundtrack composed by Peter McConnell!</p>
+                <div class="video-musica">
+                    <iframe src="https://www.youtube.com/embed/yEfcgr9cQWk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                </div>
+                <p>But what happens in the game? Well, I really think you should dive into the game knowing as little as possible. But the premise is simple: you are in a summer camp with other kids on the pursuit for becoming a Psychonaut, that is, a special agent that have psychic powers and can travel through the minds of others, and the whole game is wrapped in this concept for its level design and character development, which we're gonna talk about as well!</p>
             </div>
         </section>
         <section class="characters container">
@@ -59,11 +66,11 @@
                 <h3>Bunch of weirdos</h3>
                 <div class="wrapper">
                     <div class="random-character random-wrapper">
-                        <h2 class="random-character__name">Razputin Aquato</h2>
+                        <h2 class="random-character__name"></h2>
                         <img src="" alt="Random Psychonauts character" class="random-character__image">
                         <button class="random-character__btn get-btn">Get Random Character</button>
                     </div>
-                    <p class="wrapper-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet quod illo voluptates inventore ipsum corrupti nobis harum perferendis eum animi cum, dignissimos voluptate quasi vero facere aut voluptas facilis et.</p>
+                    <p class="wrapper__text">We take control of Raz, a circus boy who wants to become a Psychonaut, and with him, we go through a self-discovery journey as well an adventure through different perceptions of reality. Those different perceptions of reality come from the other characters in this game, who are so unique and full of personality, which makes them feel so memorable and fresh throughout all of the game. That, of course, is the result of an incredible character design, writing (the humour in particular is PHENOMENAL) and AMAZING voice acting by all of the people involved.<br> <a href="characters.html">Visit the CHARACTERS page to see more.</a></p>
                 </div>
             </div>
         </section>
@@ -72,11 +79,11 @@
                 <h2>The Psi-powers</h2>
                 <h3>Get to exercise your psyche</h3>
                 <div class="wrapper">
-                    <p class="wrapper-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet quod illo voluptates inventore ipsum corrupti nobis harum perferendis eum animi cum, dignissimos voluptate quasi vero facere aut voluptas facilis et.</p>
+                    <p class="wrapper__text">We can't talk about a game without talking about mechanics, and in this section we're talking particularly about the psi-powers, which are the abilities we get through the game to interact with the world and the levels, to overcome the obstacles and for combat too. All of the powers are mind-related in some creative way, because we are dealing with Psychonauts after all, and each one have their unique purpose and usage, giving you the opportunity to make up your own game style and experiment different aproaches (that is even more present and evident in the second game)!<br> <a href="psi-powers.html">Visit the PSI-POWERS page to see more.</a></p>
                     <div class="random-psi-power random-wrapper">
-                        <h2 class="random-psi-power__name">clairvoyance</h2>
+                        <h2 class="random-psi-power__name"></h2>
                         <img src="" alt="Random Psychonauts psi-power ability" class="random-psi-power__image">
-                        <p class="random-psi-power__description">Allows the user to see through the minds of others.</p>
+                        <p class="random-psi-power__description"></p>
                         <button class="random-psi-power__btn get-btn">Get Random Psi-power</button>
                     </div>
                 </div>
@@ -86,12 +93,13 @@
             <div class="the-world__container following-sections">
                 <h2>The World of Psychonauts</h2>
                 <h3>Travel through the minds of the misfits</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam, voluptatum? Culpa nihil omnis nesciunt cum error fugit quam iste reiciendis. Expedita fuga harum ducimus aut omnis perspiciatis tempore distinctio quia.</p>   
+                <p>The level design is probably what draws the most attention from the game, because every single level is set inside the mind of characters, so I think you can just imagine how much crazy they must go to get the right amount of surrealism and an out-of-this-world vibe for this spaces in a 3d platform game.</p>   
                 <div class="the-world__images">
                     <img src="assets/imagens/worldimage1.jpg" alt="Psychonauts ingame screenshot" class="the-world__image">
                     <img src="assets/imagens/worldimage2.jpg" alt="Psychonauts ingame screenshot" class="the-world__image">
                     <img src="assets/imagens/worldimage3.jpg" alt="Psychonauts ingame screenshot" class="the-world__image">
                 </div>
+                <p>The artstyle is superb and what really shines in setting the said surrealism, and there is little to no repetition between this levels, because every single character in which you go inside the mind is so different and unique in its personality (and craziness, sometimes)! The mechanics that are implemented in each level are also very particular to the mind you are visiting, which makes even more incredible and refreshing!</p>
             </div>
             <div class="modal invisible mobile-invisible">
                 <img src="" alt="" class="modal-image">
@@ -101,11 +109,13 @@
             <div class="psychonauts-2__container following-sections">
                 <h2>Psychonauts 2</h2>
                 <h3>16 years later</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam, voluptatum? Culpa nihil omnis nesciunt cum error fugit quam iste reiciendis. Expedita fuga harum ducimus aut omnis perspiciatis tempore distinctio quia.</p>
+                <p>You think it couldn't get any better? Well, it damn well can! Psychonauts 2 takes everything good and that worked in the first one and takes it to another level!</p>
+                <p>Psychonauts 2 is the perfect sequel, takes all the themes and the tone of its predecessor and deals in a more responsible and educative way (mental health professionals were consulted for the writing of the game). </p>
             </div>
         </section>
         <div class="video-trailer-container video-trailer-psychonauts2 container">
             <iframe src="https://www.youtube.com/embed/mBi9rqCZ4os" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <p>The game is much prettier overall, because its a 2021 game vs. a 2005 game, of course! The platform aspect of the game is much less clunky, the combat is much more of a core mechanic and fun and the story, which you couldn't believe could be any better than the incredible from the first one, is actually even better! So, don't wanna play the 2005 game because you are a lazy bastard? Play this one instead! It's the best game ever!</p>
         </div>
     </main>
     <footer class="footer container">
