--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                     </div>
                     <div class="about-the-game__text--second">
                         <h3>You like crazy cartoons?</h3>
-                        <p>It really does feel like a crazy cartoon put on a game, with its artstyle, personality, plot choices, characters, humour, dialogues and the general vibe of it, which makes it even more incredible. A mix of boldness and creativity from Tim Schaffer, because he really dove deep inside his most diverse ideas to make every single element of this game. But let's talk more about everything that makes it so good!</p>
+                        <p>It really does feel like a crazy cartoon put on a game, with its artstyle, personality, plot choices, characters, humour, dialogues and the general vibe of it. It has that early-2000's Cartoon Network style and humour mixed with an early Pixar movie feeling, which makes it even more incredible. A mix of boldness and creativity from Tim Schaffer, because he really dove deep inside his most diverse ideas to make every single element of this game. But let's talk more about everything that makes it so good!</p>
                     </div>
                 </div>
             </div>
@@ -93,7 +93,7 @@
             <div class="the-world__container following-sections">
                 <h2>The World of Psychonauts</h2>
                 <h3>Travel through the minds of the misfits</h3>
-                <p>The level design is probably what draws the most attention from the game, because every single level is set inside the mind of characters, so I think you can just imagine how much crazy they must go to get the right amount of surrealism and an out-of-this-world vibe for this spaces in a 3d platform game.</p>   
+                <p>The level design is probably what draws the most attention from the game, because every single level is set inside the mind of characters, so I think you can just imagine how much crazy they must go to get the right amount of surrealism and an out-of-this-world vibe for this spaces in a 3d platform game, presenting the idea of enemies being the subconsciousness attacking something that shouldn't be there, for example.</p>   
                 <div class="the-world__images">
                     <img src="assets/imagens/worldimage1.jpg" alt="Psychonauts ingame screenshot" class="the-world__image">
                     <img src="assets/imagens/worldimage2.jpg" alt="Psychonauts ingame screenshot" class="the-world__image">
