--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 <div class="about-the-game__text">
                     <div class="about-the-game__text--first">
                         <h3>Trust me, it's goooood!</h3>
-                        <p>I wouldn't be making this tribute website if it wasn't so good, so trust me. But expanding on that, Psychonauts is easily one of the best pieces of media that I have ever consumed in my entire life, for so many reasons, but primarily because of its uniqueness among other games, which resulted in a giant and faithful fanbase turning it in a super regarded cult classic.</p>
+                        <p>I wouldn't be making this tribute website if it wasn't so good, so trust me. But expanding on that, Psychonauts is easily one of the best pieces of media that I have ever consumed in my entire life, for so many reasons, but primarily because of its uniqueness among other games, which resulted in a faithful fanbase turning it in a super regarded cult classic.</p>
                     </div>
                     <div class="about-the-game__text--second">
                         <h3>You like crazy cartoons?</h3>
