added video to setting section

--- a/index.html
+++ b/index.html
@@ -56,6 +56,8 @@
                 <p>And I can't talk about the vibe and setting of the game without mentioning the GREAT soundtrack composed by Peter McConnell!</p>
                 <div class="video-musica">
                     <iframe src="https://www.youtube.com/embed/yEfcgr9cQWk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    <iframe src="https://www.youtube.com/embed/FPG_7FGS7NY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    
                 </div>
                 <p>But what happens in the game? Well, I really think you should dive into the game knowing as little as possible. But the premise is simple: you are in a summer camp with other kids on the pursuit for becoming a Psychonaut, that is, a special agent that have psychic powers and can travel through the minds of others, and the whole game is wrapped in this concept for its level design and character development, which we're gonna talk about as well!</p>
             </div>
